--- a/index.css
+++ b/index.css
@@ -1,3 +1,39 @@
 body {
     margin: 0;
+    background-color: #1F2937;
+    font-family: "Karla", sans-serif;
+    text-align: center;
+}
+
+h1{
+    color: white;
+}
+
+#random{
+    color: #4ADF86;
+}
+
+#sub-heading{
+    color: #D5D4D8;
+}
+
+button{
+    background-color: #10B981;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+}
+
+.output{
+    display: flex;
+    justify-content: center;
+}
+
+.password{
+    background-color: #273549;
+    color: #55F991;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin: 20px 12px;
 }
